[#3] test: MemberQueryServiceTest, MemberCommandServiceTest 단위 테스트 추가
* test: MemberCreateCommandFixture, MemberUpdateCommandFixture 추가
* test: MemberFixture에 @Getter 추가

* chore: build.gradle에 Java 21 대응을 위한 테스트 JVM 옵션 추가